# kiro.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  credentials.example.multiple.json  docker-compose.yml  install.sh
.github/workflows/: build.yaml  docker-build.yaml
admin-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
admin-ui/src/: index.css
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: add-credential-dialog.tsx  balance-dialog.tsx  batch-import-dialog.tsx  batch-verify-dialog.tsx  credential-card.tsx  dashboard.tsx  group-members-dialog.tsx  kam-import-dialog.tsx  login-page.tsx  proxy-groups-dialog.tsx  relative-time.tsx  stats-view.tsx
admin-ui/src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  textarea.tsx  toggle-group.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/lib/: storage.ts  use-now.ts  utils.ts
admin-ui/src/types/: api.ts
src/: http_client.rs  main.rs  token.rs
src/admin/: error.rs  handlers.rs  middleware.rs  mod.rs  router.rs  service.rs  types.rs
src/anthropic/: billing_stats.rs  cache_tracker.rs  converter.rs  handlers.rs  injection_scan.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs  websearch.rs
src/kiro/: binding.rs  credential_store.rs  errors.rs  mod.rs  provider.rs  token_manager.rs
src/kiro/model/: credentials.rs  usage_limits.rs
src/kiro/model/events/: base.rs  metering.rs  reasoning.rs
src/kiro/model/requests/: conversation.rs  kiro.rs
src/kiro/parser/: decoder.rs
src/model/: config.rs
src/stats/: mod.rs
tools/: calibrate_output_multiplier.py  kiro_real_samples.jsonl
