[package]
name = "kiro-rs"
version = "2026.3.158"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "socks", "rustls-tls", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"  # 非阻塞日志写入（后台线程刷盘，避免阻塞 async 执行器导致卡顿）
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"     # 图片维度预校验需要解码 base64 头部
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
rusqlite = { version = "0.34", features = ["bundled"] }  # 核心：凭据 + 时序统计持久化

[features]
default = ["import-kiro-cli", "stats"]
# 从 kiro-cli SQLite 导入凭据（gate src/import.rs）。rusqlite 已是核心依赖。
import-kiro-cli = []
# 请求级时序统计（SQLite 落盘，供 admin 出成本/用量曲线）。gate src/stats。
stats = []
