[package]
name = "kiro-rs"
version = "2026.3.178"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1   # 单一 codegen 单元，允许更激进的跨模块内联/优化（代价：编译更慢）
# 注意：不启用 panic = "abort"。本服务是高并发流式代理，靠 tokio/axum 的任务级 panic
# 隔离让「单请求崩溃」只断该连接、进程继续服务其他在途流；abort 会把任一 panic 放大成
# 整个进程退出、杀掉所有并发流，健壮性得不偿失。

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "socks", "rustls-tls", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"  # 非阻塞日志写入（后台线程刷盘，避免阻塞 async 执行器导致卡顿）
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"     # 图片维度预校验需要解码 base64 头部
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
rusqlite = { version = "0.34", features = ["bundled"] }  # 核心：凭据 + 时序统计持久化

[features]
default = ["import-kiro-cli", "stats"]
# 从 kiro-cli SQLite 导入凭据（gate src/import.rs）。rusqlite 已是核心依赖。
import-kiro-cli = []
# 请求级时序统计（SQLite 落盘，供 admin 出成本/用量曲线）。gate src/stats。
stats = []
